styles/gateway_def.css
@charset "utf-8";

* {
	margin: 0;
	padding: 0;
}

a:active {
  outline: none;
}

body {
	font-family: verdana,arial,tahoma,sans-serif;
	font-size: 1em;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100vh;
	display: flex;
	flex-direction: column;
	background: url('/styles/img/bg.png') repeat-x scroll 0 0 #E4E4E4;
	overflow: hidden;

/*	-ms-word-break: break-all;
	word-break: break-all;
	overflow-wrap: break-word;
	word-break: break-word;*/

	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	-ms-hyphens: auto;
	hyphens: auto;
}

input, button, submit {
	font-size: 1em;
	font-family: inherit;
}

@font-face {
	font-family: 'Symbola';
	src: url('/styles/Symbola.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

.symbolFont {
	font-family: verdana,arial,tahoma,Symbola,sans-serif;
}

#not_connected_wrapper, #background-wrapper {
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	background: rgba(221, 221, 221, 0.5);
	width: 100%;
	height: 100%;
	z-index: 9;
}

#background-wrapper {
	display: none;
}

#not_connected_div {
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	-moz-box-shadow: 2px 2px 7px #505050;
	-webkit-box-shadow: 2px 2px 7px #505050;
	box-shadow: 2px 2px 7px #505050;
	background: url("/styles/img/techbg.png") no-repeat scroll right top #E8E8E8;
	border: 1px solid #757575;
	left: 30%;
	margin-left: -8em;
	margin-top: -50px;
	padding: 14px;
	position: fixed;
	top: 50%;
	width: 36em;
	z-index: 10;
}

#not_connected_div {
	width: 28.5em !important;
}

#top_menu {
	background: #272727 url("/styles/img/menu.png") repeat-x center;
	background-size: auto 100%;
	flex: 0 0 auto;
	display: flex;
	align-items: center;
	height: 2.9em;
	min-height: 30px;
	width: 100%;
}
	
#top_menu ul {
	height: 30px;
	list-style: none outside none;
	margin-right: 2em;
	width: 600%;
}
	
#top_menu ul li {
	display: block;
	float: left;
	margin-right: 12px;
	padding: 7px;
}
	
#top_menu ul li a {
	color: #CECECE;
	text-decoration: none;
}
	
#top_menu ul li:focus a, #top_menu ul li:hover a {
	color: #FFFFFF;
	text-decoration: none;
}
	
#top_menu ul li.newmsg {
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	border-radius: 8px;
	background: none repeat scroll 0 0 #949494 !important;
}
	
#top_menu ul li.newmsg a {
	color: #000000 !important;
}
	
#top_menu ul li.newmsg2 {
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	border-radius: 8px;
	background: none repeat scroll 0 0 #444444;
}
	
#top_menu ul li.newmsg2 a {
	color: #FFFFFF;
}
	
#wrapper {
	display: flex;
	flex-direction: row;
	flex: 1 1 auto;
	min-height: 0;
}

#left-col {
	display: flex;
	flex-direction: column;
	flex: 1 1 auto;
	min-width: 0;
	min-height: 0;
}

#right-col {
	display: flex;
	flex-direction: column;
	flex: 0 0 auto;
	width: 23%; /* flex-basis:auto so jQuery width animation works */
	min-height: 0;
	padding-right: 10px;
}

#nicklist {
	flex: 1 1 auto;
	overflow: visible;
	min-height: 0;
}
	
#chatbox {
	flex: 1 1 auto;
	overflow: hidden;
	min-height: 0;
}
	
#chat-wrapper {
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	background: none repeat scroll 0 0 #FFFFFF;
	border: 1px solid #9A9A9A;
	height: calc(100% - 20px);
	margin: 10px auto;
	overflow: auto;
	overflow-anchor: none;
	width: 97%;
	word-wrap: break-word;
}
	
#nick-wrapper {
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	background: none repeat scroll 0 0 #FFFFFF;
	border: 1px solid #9A9A9A;
	height: calc(100% - 8px);
	margin: 4px auto;
	overflow: auto;
	position: relative;
	width: 98%;
}
	
ul.nicklist {
	list-style: none outside none;
	margin-left: 10px;
}
	
ul.nicklist li {
	border: 1px solid #FFFFFF;
}
	
ul.nicklist li:hover, ul.nicklist li.activeNick {
	background: none repeat scroll 0 0 #E6EFFA;
	border: 1px solid #7492B6;
	cursor: pointer;
}
	
#input-wrapper {
	margin: 0 auto;
	position: relative;
	width: 99%;
	z-index: 8;
}
	
input.input {
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	border: 1px solid #9A9A9A;
	color: #8A8A8A;
	padding: 3px;
	width: 100%;
}
	
input.input:focus {
	color: #000000;
}
	
input.submit {
	background: none repeat scroll 0 0 #DADADA;;
}

button.textFormat {
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	border: 1px solid #9A9A9A;
	padding: 3px;
	margin: 6px;
	height: 2.1em;
	width: 9em;
	cursor: pointer;
}

button.textFormat:hover {
	background-color: #d7e4f3;
}

input.submit:hover, input.submit:focus {
	background: none repeat scroll 0 0 #EAEAEA;
	cursor: pointer;
}
	
span.time {
	color: #848484;
	font-family: Monospace,courier;
}
	
span.motd {
	color: #848484;
	font-family: Monospace,courier;
	white-space: pre;
}

span.sinfo {
	color: #848484;
}

span.nick {
	color: #808080;
}
	
span.yournick {
	color: #000000;
}
	
span.hilight, span.hilight span.nick {
	color: #1F29D3;
	font-weight: bold;
}

.ownNick {
	color: #1F29D3;
}
	
span.join {
	color: #008A0B;
}
	
span.part {
	color: #713000;
}
	
span.kick {
	color: #AA0000;
}
	
span.mode {
	color: #007D89;
}

span.netsplit {
	color: #aa1111;
}

span.netjoin {
	color: #11aa11;
}

.event-group-summary {
	background-color: #f0f8ff;
	border-left: 3px solid #007D89;
	padding-left: 5px;
}

.event-group-toggle {
	color: #0066cc;
	cursor: pointer;
	text-decoration: none;
	font-size: 0.9em;
}

.event-group-toggle:hover {
	text-decoration: underline;
}

span.join a {
	color: #000055;
	cursor: pointer;
	text-decoration: underline;
}

span.modevictim, span.modeinfo {
	font-weight: bolder;
}
	
#chat-wrapper br {
	margin-top: 2px;
}
	
#info {
	flex: 0 0 auto;
	height: 3.7em;
	margin-left: 25px;
	overflow: hidden;
	overflow-y: auto;
}
	
#info h1 {
	display: inline;
	font-size: 1.4em;
}
	
#info h2 {
	display: inline;
	font-size: 1.1em;
	font-weight: normal;
	padding: 5px;
	margin-left: 10px;
}

#info > span {
	display: block;
	padding: 4px;
	min-height: 3em;
}
/* ... */

